--- a/japanese/src/style.css
+++ b/japanese/src/style.css
@@ -16,3 +16,25 @@ body {
     width: 90% !important;
     margin: 10px auto !important;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 1px dashed;
+}
+
+a:link {
+    color: inherit;
+}
+
+a:visited {
+    color: #B37AFF;
+}
+
+a:hover {
+    color: #4285F4;
+}
+
+a:active {
+    color: #FF0000;
+}
