--- a/japanese/src/assets/icons/iconfont.css
+++ b/japanese/src/assets/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: "iconfont"; /* Project id 4899974 */
-    src: url('iconfont.woff2?t=1745200776990') format('woff2'),
-    url('iconfont.woff?t=1745200776990') format('woff'),
-    url('iconfont.ttf?t=1745200776990') format('truetype');
+    src: url('iconfont.woff2?t=1745419095528') format('woff2'),
+    url('iconfont.woff?t=1745419095528') format('woff'),
+    url('iconfont.ttf?t=1745419095528') format('truetype');
 }
 
 .iconfont {
@@ -13,6 +13,10 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-on-GC_138_line-Translate:before {
+    content: "\e624";
+}
+
 .icon-on-music:before {
     content: "\e704";
 }
@@ -21,9 +25,7 @@
     content: "\e626";
 }
 
-.icon-on-AUDIO:before {
-    content: "\ea04";
-}
+
 
 [class^="icon-on-"], [class*=" icon-on-"] {
     font-family: "iconfont" !important;
