--- a/japanese/src/style.css
+++ b/japanese/src/style.css
@@ -1,8 +1,10 @@
 :root {
     --header-height: 50px;
-    --content-max-width: 650px;
+    --content-max-width: 700px;
     --go-top-color: #fff;
     --go-top-bgc: #333;
+
+    --text-content-line-height: 40px;
 }
 
 html.dark {
@@ -47,10 +49,6 @@ a:active {
     color: inherit;
 }
 
-ruby {
-    ruby-position: under;
-}
-
 ruby rt {
     user-select: none;
     pointer-events: none;
@@ -58,5 +56,4 @@ ruby rt {
 
 ruby rt::before {
     content: attr(data-ruby);
-    display: block;
 }
