--- a/japanese/src/assets/icons/iconfont.css
+++ b/japanese/src/assets/icons/iconfont.css
@@ -1,36 +1,36 @@
 @font-face {
-    font-family: "iconfont"; /* Project id 4899974 */
-    src: url('iconfont.woff2?t=1745419095528') format('woff2'),
+  font-family: 'iconfont'; /* Project id 4899974 */
+  src:
+    url('iconfont.woff2?t=1745419095528') format('woff2'),
     url('iconfont.woff?t=1745419095528') format('woff'),
     url('iconfont.ttf?t=1745419095528') format('truetype');
 }
 
 .iconfont {
-    font-family: "iconfont" !important;
-    font-size: 16px;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: 'iconfont' !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-on-GC_138_line-Translate:before {
-    content: "\e624";
+  content: '\e624';
 }
 
 .icon-on-music:before {
-    content: "\e704";
+  content: '\e704';
 }
 
 .icon-on-MPIS-TTS:before {
-    content: "\e626";
+  content: '\e626';
 }
 
-
-
-[class^="icon-on-"], [class*=" icon-on-"] {
-    font-family: "iconfont" !important;
-    font-size: 16px;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+[class^='icon-on-'],
+[class*=' icon-on-'] {
+  font-family: 'iconfont' !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
