--- a/japanese/src/style.css
+++ b/japanese/src/style.css
@@ -4,7 +4,7 @@
   --go-top-color: #fff;
   --go-top-bgc: #333;
 
-  --text-content-line-height: 42px;
+  --text-content-line-height: 3rem;
 }
 
 html.dark {
