--- a/japanese/src/style.css
+++ b/japanese/src/style.css
@@ -1,8 +1,8 @@
 :root {
     --header-height: 50px;
     --content-max-width: 700px;
-    --go-top-color: #fff;
-    --go-top-bgc: #333;
+    --link-to-color: #fff;
+    --link-to-bgc: #333;
 
     --text-content-line-height: 3rem;
     --grammar-headers-height: 35px;
@@ -36,8 +36,8 @@
 }
 
 html.dark {
-    --go-top-color: #fff;
-    --go-top-bgc: #333;
+    --link-to-color: #fff;
+    --link-to-bgc: #333;
 }
 
 * {
