--- a/japanese/src/style.css
+++ b/japanese/src/style.css
@@ -1,5 +1,5 @@
 :root {
-    --el-color-primary: #298a5e !important;
+    --el-color-primary: rgb(22, 135, 99) !important;
     --el-color-primary-light-3: color-mix(in srgb, var(--el-color-primary) 70%, white 30%) !important;
     --el-color-primary-light-5: color-mix(in srgb, var(--el-color-primary) 50%, white 50%) !important;
     --el-color-primary-light-7: color-mix(in srgb, var(--el-color-primary) 30%, white 70%) !important;
@@ -9,8 +9,6 @@
 
     --header-height: 50px;
     --content-max-width: 700px;
-    --link-to-color: #fff;
-    --link-to-bgc: #333;
 
     --text-content-line-height: 3rem;
     --grammar-headers-height: 35px;
@@ -53,8 +51,6 @@ html {
 }
 
 html.dark {
-    --link-to-color: #fff;
-    --link-to-bgc: #333;
 }
 
 * {
@@ -75,25 +71,6 @@ a {
     text-decoration-thickness: 1px;
     text-decoration-color: var(--el-color-primary);
     text-underline-offset: 4px;
-}
-
-a:link {
-    color: inherit;
-}
-
-a:visited {
-    /*color: #B37AFF;*/
-    color: inherit;
-}
-
-a:hover {
-    /*color: #4285F4;*/
-    color: inherit;
-}
-
-a:active {
-    /*color: #FF0000;*/
-    color: inherit;
 }
 
 ruby rt::before {
