--- a/japanese/src/style.css
+++ b/japanese/src/style.css
@@ -1,25 +1,20 @@
 :root {
-    --el-color-primary: rgb(22, 135, 99) !important;
-    --el-color-primary-light-3: color-mix(in srgb, var(--el-color-primary) 70%, white 30%) !important;
-    --el-color-primary-light-5: color-mix(in srgb, var(--el-color-primary) 50%, white 50%) !important;
-    --el-color-primary-light-7: color-mix(in srgb, var(--el-color-primary) 30%, white 70%) !important;
-    --el-color-primary-light-8: color-mix(in srgb, var(--el-color-primary) 20%, white 80%) !important;
-    --el-color-primary-light-9: color-mix(in srgb, var(--el-color-primary) 10%, white 90%) !important;
-    --el-color-primary-dark-2: color-mix(in srgb, var(--el-color-primary) 80%, black 20%) !important;
+    --root-header-height: 40px;
 
-    --header-height: 50px;
+    --header-height: 40px;
     --content-max-width: 700px;
 
-    --text-content-line-height: 3rem;
-    --grammar-headers-height: 35px;
-    --lesson-headers-height: 60px;
+    --text-content-line-height: 3;
+    --grammar-headers-height: 40px;
+    --lesson-headers-height: 70px;
 
     --gap12: 12px;
     --gap-12: 12px;
     --audio-height: 54px;
-    --root-header-height: 30px;
+
     --pagination-height: 35px;
     --single-row-header-height: 35px;
+
     /* default */
     --root-footer-height: 0px;
     /* desktop */
