--- a/japanese/src/style.css
+++ b/japanese/src/style.css
@@ -2,7 +2,7 @@
     --root-header-height: 40px;
 
     --header-height: 40px;
-    --content-max-width: 700px;
+    --content-max-width: 800px;
 
     --text-content-line-height: 3;
     --grammar-headers-height: 40px;
@@ -24,25 +24,26 @@
     /* android edge */
     /*--root-footer-height: 105px;*/
 
+    --width-10: 10px;
     --width-12: 12px;
 
-    --right-site-center: calc((100vw - var(--content-max-width)) * 0.25)
+    --right-site-center: calc((100vw - var(--content-max-width)) * 0.25);
+
+    font-size: 10px;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 800px) {
     :root {
         --ib-offset: var(--right-site-center);
     }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     :root {
-        --ib-offset: 0;
-    }
-}
+        --ib-offset: 10px;
 
-html {
-    font-size: 10px;
+        font-size: 8px;
+    }
 }
 
 html.dark {
